<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Arch</string>
    <string name="patras" tools:ignore="MissingTranslation">Patras</string>
    <string name="acropolis_text" tools:ignore="MissingTranslation">The greatest and finest sanctuary of ancient Athens, dedicated primarily to its patron, the goddess Athena, dominates the centre of the modern city from the rocky crag known as the Acropolis. The most celebrated myths of ancient Athens, its greatest religious festivals, earliest cults and several decisive events in the city\'s history are all connected to this sacred precinct. The monuments of the Acropolis stand in harmony with their natural setting and combine different orders and styles of Classical art in a most innovative manner and have influenced art and culture for many centuries. The Acropolis of the fifth century BC is the most accurate reflection of the splendour, power and wealth of Athens at its greatest peak, the golden age of Perikles. Athenians and foreigners alike worked on this project, receiving a salary of one drachma a day. The most important buildings visible on the Acropolis today - that is, the Parthenon, the Propylaia, the Erechtheion and the temple of Athena Nike, were erected during this period under the supervision of the greatest architects, sculptors and artists of their time. The temples on the north side of the Acropolis housed primarily the earlier Athenian cults and those of the Olympian gods, while the southern part of the Acropolis was dedicated to the cult of Athena in her many qualities: as Polias (patron of the city), Parthenos, Pallas, Promachos (goddess of war), Ergane (goddess of manual labour) and Nike (Victory). After the end of the Peloponnesian war in 404 BC and until the first century BC no other important buildings were erected on the Acropolis.</string>
    <string name="acropolis_links" tools:ignore="MissingTranslation"/>
    <string name="acropolis" tools:ignore="MissingTranslation">Acropolis</string>
    <string name="Greece" tools:ignore="MissingTranslation">Greece</string>
    <string name="previous" tools:ignore="MissingTranslation"/>
    <string name="hello_first_fragment" tools:ignore="MissingTranslation"/>
    <string name="next" tools:ignore="MissingTranslation"/>
    <string name="action_settings" tools:ignore="MissingTranslation"/>
    <string name="first_fragment_label" tools:ignore="MissingTranslation"/>
    <string name="second_fragment_label" tools:ignore="MissingTranslation"/>
    <string name="the_albacin" tools:ignore="MissingTranslation">The Albacin</string>
    <string name="albacin_text" tools:ignore="MissingTranslation">The Albaicín, also known as Albayzín (from Arabic: ٱلْبَيّازِينْ, romanized: al-Bayyāzīn), is a district of Granada, in the autonomous community of Andalusia, Spain. It is centered around a hill on the north side of the Darro River which passes through the city. The neighbourhood is notable for its historic monuments and for largely retaining its medieval street plan dating back to the Nasrid period (13th to 15th centuries), although it nonetheless went through many physical and demographic changes after the end of the Reconquista in 1492. It was declared a World Heritage Site in 1994, as an extension of the historic site of the nearby Alhambra.</string>
    <string name="amathus_archaeological_site" tools:ignore="MissingTranslation">Amathus Archaeological Site</string>
    <string name="amathus_text" tools:ignore="MissingTranslation">Amathus is one of the significant ancient city-kingdoms of Cyprus where, according to mythology, Greek hero Theseus left the pregnant Ariadne to be attended by local women. It was also an important site of worship of the Goddess Aphrodite. There are various archaeological finds at the site, including the Agora, the public baths, the Temple of Aphrodite, early Christian basilicas and several tombs. The Agora is located in the lower town. In ancient times, it was the traditional hub for commercial and political activities, and the buildings surrounding it, played an important role in the daily life of the city.</string>
    <string name="the_roman_aqueduct_in_perugia" tools:ignore="MissingTranslation">The Roman Aqueduct in Perugia</string>
    <string name="the_roman_aqueduct_in_perugia_text" tools:ignore="MissingTranslation">The Fontana Maggiore in Perugia was once fed by this Roman aqueduct. The aqueduct was built in 1245 and it was an extraordinary work: without using pumps, it was still able to bring water to a steep and uneven city like Perugia. It is about 4km long. In the middle of 1800s, the aqueduct stopped its work as it was too expensive. Today, still, it offers one of the most beautiful promenades in Italy. The most characteristic part is from Porta Sant\'Angelo (near the Cathedral and the Fontana Maggiore) with a bridge supported by a dozen bays with large arches and low, colourful houses.</string>
    <string name="cathedral_of_saint_andrew" tools:ignore="MissingTranslation">Cathedral of Saint Andrew</string>
    <string name="cathedral_of_saint_andrew_text" tools:ignore="MissingTranslation">The Archaeological Museum of Patras is one of the most important museums in the country. It was built in 2008 to designs by architect Theofanis Bobotis. The impressive building of the museum is located at the northern entrance of the city and is a model of architectural elegance. Its exterior, in complete harmony with the surrounding area, charms every passerby. A spherical dome covered with titanium sheets dominates an artificial lake, signifying the relationship of the city of Patras with the liquid element. It has a total area of 5,955 square metres and has three large halls for the permanent exhibition, one hall for temporary exhibitions, modern reception and public service areas, an amphitheatre, a refreshment room, conservation laboratories, storage rooms for antiquities and an open-air area, which also serves as a parking area for visitors\' vehicles. The three halls with their respective sections shed light on the burial customs, private and public life of the people of antiquity. The permanent exhibition follows the display mode of all modern museums in the world, i.e. many of the exhibits are not enclosed in cases, but stand freely in the space. Panoramic routes allow you to tour the museum in a short time, while modern technology (virtual museum) allows you to communicate with other cultural sites around the world. In addition, continuous projections on video walls within the exhibition space complement the exhibits. The highly dynamic design of the exhibition and the way the objects are projected will capture your attention and stimulate your interest in learning.</string>
    <string name="assisi" tools:ignore="MissingTranslation">Assisi</string>
    <string name="assisi_monuments" tools:ignore="MissingTranslation">Assisi Monuments</string>
    <string name="basilica_of_san_francesco" tools:ignore="MissingTranslation">Basilica of San Francesco</string>
    <string name="the_woods_of_san_francesco" tools:ignore="MissingTranslation">The Woods of San Francesco</string>
    <string name="temple_of_minerva" tools:ignore="MissingTranslation">Temple of Minerva</string>
    <string name="athens" tools:ignore="MissingTranslation">Athens</string>
    <string name="athens_text" tools:ignore="MissingTranslation"> Athens has been the capital of Greece since 1834 and is the country\'s largest and most densely populated city. The Athens basin, including Piraeus, has a population of 3,059,764 inhabitants. The name of the city of Athens comes from the patron goddess Athena. It is located in Attica, in eastern Central Greece, and is one of the oldest cities in the world, with its recorded history dating back to 3,200 BC. The legacy of the classical era is still evident in the city, represented by ancient monuments and works of art, the most famous of which is the Parthenon, considered an emblematic monument of ancient Western civilization. Roman and Byzantine monuments still remain in the city, as well as a small number of Ottoman monuments, while in its historical core there are elements that reflect the historical continuity of the city.</string>
    <string name="athens_monuments" tools:ignore="MissingTranslation">Athens Monuments</string>
    <string name="acropoli" tools:ignore="MissingTranslation">Acropolis</string>
    <string name="odeon_of_herodus_atticus" tools:ignore="MissingTranslation">Odeon of Herodus Atticus</string>
    <string name="panathenaic_stadium" tools:ignore="MissingTranslation">Panathenaic Stadium</string>
    <string name="bas_lica_de_nuestra_se_ora_del_pilar" tools:ignore="MissingTranslation">Basílica de Nuestra Señora del Pilar</string>
    <string name="larnaka_monuments" tools:ignore="MissingTranslation">Larnaka Monuments</string>
    <string name="Church_of_saint_lazarus" tools:ignore="MissingTranslation">Church of Saint Lazarus</string>
    <string name="Larnaka_medieval_castle" tools:ignore="MissingTranslation">Larnaka medieval castle</string>
    <string name="larnaka_district_archaeological_museum" tools:ignore="MissingTranslation">Larnaka District Archaeological Museum</string>
    <string name="limassol_monuments" tools:ignore="MissingTranslation">Limassol Monuments</string>
    <string name="Kourion_archaeological_site" tools:ignore="MissingTranslation">Kourion Archaeological Site</string>
    <string name="Limassol_medieval_castle" tools:ignore="MissingTranslation">Limassol Medieval Castle</string>
    <string name="Amathus_archaeological_site" tools:ignore="MissingTranslation">Amathus Archaeological Site</string>
    <string name="maratea_monuments" tools:ignore="MissingTranslation">Maratea Monuments</string>
    <string name="The_statue_of_the_christ_the_redeemer" tools:ignore="MissingTranslation">The Statue of the Christ the Redeemer</string>
    <string name="The_basilica_of_st_blaise" tools:ignore="MissingTranslation">The Basilica of St Blaise</string>
    <string name="Castrocucco_castle" tools:ignore="MissingTranslation">Castrocucco Castle</string>
    <string name="matera_monuments" tools:ignore="MissingTranslation">Matera Monuments</string>
    <string name="the_sassi" tools:ignore="MissingTranslation">The Sassi</string>
    <string name="The_castello_tramontano" tools:ignore="MissingTranslation">The Castello Tramontano</string>
    <string name="the_murgia_park" tools:ignore="MissingTranslation">The Murgia Park</string>
    <string name="nicosia_monuments" tools:ignore="MissingTranslation">Nicosia Monuments</string>
    <string name="Church_of_panagia_our_lady_tou_moutoulla" tools:ignore="MissingTranslation">Church of Panagia (Our Lady) tou Moutoulla</string>
    <string name="The_cyprus_museum" tools:ignore="MissingTranslation">The Cyprus Museum</string>
    <string name="archaeological_site_of_tamassos" tools:ignore="MissingTranslation">Archaeological Site of Tamassos</string>
    <string name="paphos_monuments" tools:ignore="MissingTranslation">Paphos Monuments</string>
    <string name="tombs_of_the_kings" tools:ignore="MissingTranslation">Tombs of the Kings</string>
    <string name="archaeological_park_of_kato_paphos_nea_paphos" tools:ignore="MissingTranslation">Archaeological Park of Kato Paphos (Nea Paphos)</string>
    <string name="Paphos_castle_medieval_fort" tools:ignore="MissingTranslation">Paphos Castle (Medieval Fort)</string>
</resources>