<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_background"
    tools:ignore="MissingDefaultResource">

    <ScrollView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange_background"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/backbutton"
                android:layout_width="52dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:contentDescription="@string/Greece"
                android:onClick="startSecondActivity"
                app:cornerRadius="50dp"
                app:icon="@drawable/car_ui_icon_arrow_back" />

            <TextView
                android:id="@+id/Paphos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/paphos_monuments"
                android:textColor="@color/orange"
                android:textSize="60sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="42dp" />

            <TextView
                android:id="@+id/oldfortesstext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/tombs_of_the_kings"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/kingstombs"
                android:layout_width="360dp"
                android:layout_height="267dp"
                android:src="@drawable/kings_tombs_cover" />

            <TextView
                android:id="@+id/katopaphostext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/archaeological_park_of_kato_paphos_nea_paphos"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/katopaphos"
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:src="@drawable/paphos_park_cover" />

            <TextView
                android:id="@+id/paphoscastletext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/Paphos_castle_medieval_fort"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/paphoscastle"
                android:layout_width="346dp"
                android:layout_height="275dp"
                android:src="@drawable/paphos_castle_cover" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>