<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_background">

    <ScrollView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange_background"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/Nicosia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/maratea_monuments"
                android:textColor="@color/orange"
                android:textSize="60sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="42dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/The_statue_of_the_christ_the_redeemer"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/christ_redeemer"
                android:layout_width="371dp"
                android:layout_height="310dp"
                android:src="@drawable/christ_redeemer_cover" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/The_basilica_of_st_blaise"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/st_blaise_photo"
                android:layout_width="371dp"
                android:layout_height="225dp"
                android:src="@drawable/st_blaise_cover" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/Castrocucco_castle"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/castrocucco_castle_photo"
                android:layout_width="373dp"
                android:layout_height="275dp"
                android:src="@drawable/castrocucco_castle_cover" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>