<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_background"
    tools:ignore="MissingDefaultResource">

    <ScrollView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange_background"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/Nicosia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/nicosia_monuments"
                android:textColor="@color/orange"
                android:textSize="60sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="42dp" />

            <TextView
                android:id="@+id/moutoullatext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/Church_of_panagia_our_lady_tou_moutoulla"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/moutoulla"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/moutoulla_cover" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/The_cyprus_museum"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/cyprusmuseum"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/cyprus_museum_cover" />

            <TextView
                android:id="@+id/tamassostext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/archaeological_site_of_tamassos"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/tamassos"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/tamassos_cover" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>