<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_background"
    tools:ignore="MissingDefaultResource">

    <ScrollView
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange_background"
        android:visibility="visible">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/Larnaka"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/larnaka_monuments"
                android:textColor="@color/orange"
                android:textSize="60sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="42dp" />

            <TextView
                android:id="@+id/kouriontext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/Church_of_saint_lazarus"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/lazarus"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/saint_lazarus_cover" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/Larnaka_medieval_castle"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/medievalcastlephoto"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/larnaka_castle_cover" />

            <TextView
                android:id="@+id/larnakamuseumtext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:text="@string/larnaka_district_archaeological_museum"
                android:textSize="45dp" />

            <ImageView
                android:id="@+id/larnakamuseum"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:src="@drawable/larnaka_museum_cover" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>